libs/config/tests/errors/ce4_missing_semicolon/source.hpp
outer = "nosemi"
class Test {
    inner = "nosemi"
};
